--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "nodemon src/index.js"
+    "start-dev": "nodemon src/index.js",
+    "start": "node src/app.js"
   },
   "keywords": [],
   "author": "Douglas Fortunato <douglasfortunato@hotmail.com> (https://github.com/indeximer)",
